# logtime-mcp

./: README.md  env_setup.sh  pyproject.toml  pyrightconfig.json  run_mcp.sh  test_client.py
src/timesheet_mcp/: main.py
src/timesheet_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: timesheet_mcp_test.py
